PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-33_expression_arithm/gcc-compile.txt
input.c:6:5: error: use of undeclared identifier 'c'
    c = a - (b*5+3);
    ^
input.c:7:12: error: use of undeclared identifier 'c'
    return c;
           ^
2 errors generated.

return code: 1
